crates/kaban-parser/tests/snapshots/expressions__pass_and_break_without_returning_anything.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: pass; return;

Block [
    Pass,
    Return,
]
