crates/kaban-parser/tests/snapshots/expressions__pass_value_and_break_and_returning_expression.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: pass x + 10; return self.foo();

Block [
    Pass(
        Add {
            left: Identifier("x"),
            right: IntLit("10"),
        },
    ),
    Return(
        MethodCall {
            callee: Self_,
            method name: Identifier("foo"),
            is mutable: false,
            args: [],
        },
    ),
]
