crates/kaban-parser/tests/snapshots/expressions__passing_type_to_function.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: foo(type i32);

Block [
    FuncCall {
        callee: Identifier("foo"),
        args: [
            Type(I32),
        ],
    },
]
