crates/kaban-parser/tests/snapshots/expressions__string_literal_expression.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: "hello";

Block [
    StringLit("\"hello\""),
]
