crates/kaban-parser/tests/snapshots/expressions__true_literal.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: x == true;

Block [
    Equal {
        left: Identifier("x"),
        right: true,
    },
]
