crates/kaban-parser/tests/snapshots/expressions__type_casting_with_dynamic_array.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: x as i32[];

Block [
    As {
        left: Identifier("x"),
        right: DynArrayType(
            Type(I32),
        ),
    },
]
