crates/kaban-parser/tests/snapshots/expressions__type_casting_with_i32.snap
---
source: crates/kaban-parser/tests/expressions.rs
expression: print
---
input: x as i32;

Block [
    As {
        left: Identifier("x"),
        right: Type(I32),
    },
]
